# attested-workload

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
deploy/: Dockerfile.enclave  README.md  azure-cvm.sh  gcp-tdx.sh  nitro-deploy.sh
docs/: BOOTSTRAP.md  BUILD.md  DESIGN.md  HARDWARE_VALIDATION.md  STAGES.md  index.html
docs/consumers/: tenet.md
examples/: eif-entry.sh  hello-workload.py
src/: eat.rs  lib.rs  main.rs  registry.rs  value_x.rs
src/net/: acme.rs  attested_tls.rs  ct.rs  tls.rs  vsock.rs
src/quote/: verify.rs
src/tee/: detect.rs  kds.rs  nitro.rs  snp.rs  tdx.rs  tpm.rs
tests/: attested_tls_e2e.rs  chain_e2e.rs  cross_verify.rs  eat_kms_e2e.rs  hardware_regression.rs
